# slack_workflow_practice

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
application/: app.py  pyproject.toml
containers/python/: Dockerfile
custom_func_test/: app.py  manifest.json  requirements.txt
custom_func_test/.slack/: apps.dev.json  config.json
